poketwo/afd-icon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: afd-icon-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: afdicon.poketwo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: afd-icon
                port:
                  number: 8000
